fixed bugs of course page

--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@ramonak/react-progress-bar": "^5.2.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "canvas": "^2.11.2",
     "clsx": "^2.1.1",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-simple-typewriter": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.33.3"
