--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "canvas": "^2.11.2",
     "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
+    "firebase": "^10.12.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "react-vertical-timeline-component": "^3.6.0",
+    "recoil": "^0.7.7",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
