test problems, code editor, firestore database
Update IDEglobals.css and tailwind.config.ts, add new dependencies, and modify layout.tsx and page.tsx

--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@emailjs/browser": "^4.3.3",
     "@ramonak/react-progress-bar": "^5.2.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "@uiw/codemirror-theme-vscode": "^4.22.1",
+    "@uiw/codemirror-themes": "^4.22.1",
+    "@uiw/react-codemirror": "^4.22.1",
     "canvas": "^2.11.2",
     "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
@@ -25,8 +29,10 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-split": "^2.0.14",
     "react-toastify": "^10.0.5",
     "react-vertical-timeline-component": "^3.6.0",
+    "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "sharp": "^0.33.3"
   },
