--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/codemirror-theme-vscode": "^4.22.1",
     "@uiw/codemirror-themes": "^4.22.1",
     "@uiw/react-codemirror": "^4.22.1",
+    "assert": "^2.1.0",
     "canvas": "^2.11.2",
     "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
