--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.6",
     "@emailjs/browser": "^4.3.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@ramonak/react-progress-bar": "^5.2.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
@@ -18,11 +24,12 @@
     "@uiw/codemirror-themes": "^4.22.1",
     "@uiw/react-codemirror": "^4.22.1",
     "assert": "^2.1.0",
+    "axios": "^1.7.2",
     "canvas": "^2.11.2",
     "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
     "firebase": "^10.12.0",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
